@@ -39,6 +39,10 @@ glibc (2.2.92-1) unstable; urgency=low
 
      - debian/rules: Add time/date stamps to beginning and end of log files
 
+     - db1-addon-2.1.3.tar.bz2: Delete
+
+     - debian/ppc-memset.S: Delete
+
   * GOTO Masanori <gotom@debian.or.jp>
      - debian/packages.d/libc-dbg.mk: update libpthread-0.9 -> 0.10.
      - packages.d/libc.mk: likewise.
